--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="characters">Personajes</string>
     <string name="character_comics">Comics del personaje</string>
     <string name="comic">Comic</string>
+    <string name="start">Start</string>
 </resources>
