--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="character_comics">Comics del personaje</string>
     <string name="comic">Comic</string>
     <string name="start">Start</string>
+    <string name="error_load_characters">Error al cargar los personajes</string>
+    <string name="empty_list_characters">Lista vacía de personajes</string>
 </resources>
